# Collaboration_G

./: README.md
mpc/config/: param.yaml
mpc/include/: mpc.h
mpc/src/: cubic_spline_planner.cpp  mpc.cpp  mpc_node.cpp
planner/bspline_opt/include/bspline_opt/: bspline_optimizer.h
planner/bspline_opt/src/: bspline_optimizer.cpp  uniform_bspline.cpp
planner/path_searching/src/: dyn_a_star.cpp
planner/plan_env/include/plan_env/: grid_map.h
planner/plan_env/src/: grid_map.cpp
planner/plan_manage/include/plan_manage/: ego_replan_fsm.h  planner_manager.h
planner/plan_manage/launch/: advanced_param.xml  default.rviz  map.launch  multi_uav.launch  run_in_sim.launch  run_in_xtdrone.launch  simulator.xml  swarm.launch
planner/plan_manage/src/: ego_replan_fsm.cpp  planner_manager.cpp  traj_server.cpp
planner/traj_utils/include/traj_utils/: plan_container.hpp
swarm_bridge/: CMakeLists.txt  package.xml
swarm_bridge/launch/: bridge_tcp.launch  bridge_udp.launch
swarm_bridge/rviz_config/: receive_map.rviz
swarm_bridge/src/: bridge_node_udp.cpp  bridge_tcp_node.cpp  bridge_udp_node.cpp
uav_simulator/fake_car/: CMakeLists.txt  package.xml
uav_simulator/fake_car/launch/: fake_car.launch
uav_simulator/fake_car/src/: fake_car.cpp
